Fix of 'starting umbrello does not display any window'.

BUG:329831
FIXED-IN:4.12.3
(cherry picked from commit c6640aa458af39b1a31fb04ae6de26f0084f7758)